# prmd

./: Cargo.toml  LICENSE  README.md
sample-files/: blockquotes.md  code-and-syntax-highlighting.md  description-list.md  emphasis.md  footnotes.md  headers.md  horizontal-rules.md  images.md  inline-html.md  links.md  lists.md  tables.md  task-lists.md  youtube-videos.md
src/: lib.rs  main.rs
